// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkillsTable component should render when it is expandable 1`] = `
<DocumentFragment>
  <div
    class="skills-table-container"
  >
    <table
      class="skills-table contracted"
    >
      <thead>
        <tr>
          <th
            class="skill-column-header"
          >
            Skill
          </th>
          <th>
            Correct
          </th>
          <th>
            Incorrect
          </th>
          <th
            class="summary-header"
          >
            Summary
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Adjectives and Adverbs
          </td>
          <td>
            1
          </td>
          <td>
            6
          </td>
          <td
            class=""
          >
            Partially correct
          </td>
        </tr>
        <tr>
          <td>
            Capitalization
          </td>
          <td>
            2
          </td>
          <td>
            0
          </td>
          <td
            class="fully-correct"
          >
            Fully correct
          </td>
        </tr>
        <tr>
          <td>
            Commonly Confused Words
          </td>
          <td>
            1
          </td>
          <td>
            1
          </td>
          <td
            class=""
          >
            Partially correct
          </td>
        </tr>
      </tbody>
    </table>
    <button
      class="show-more-button"
      type="button"
    >
      <span>
        Show more
      </span>
      <img
        alt="Expand icon"
        class="expand-icon"
        src="undefined/images/icons/expand.svg"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`SkillsTable component should render when it is not expandable 1`] = `
<DocumentFragment>
  <div
    class="skills-table-container"
  >
    <table
      class="skills-table "
    >
      <thead>
        <tr>
          <th
            class="skill-column-header"
          >
            Skill
          </th>
          <th>
            Correct
          </th>
          <th>
            Incorrect
          </th>
          <th
            class="summary-header"
          >
            Summary
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Adjectives and Adverbs
          </td>
          <td>
            1
          </td>
          <td>
            6
          </td>
          <td
            class=""
          >
            Partially correct
          </td>
        </tr>
        <tr>
          <td>
            Capitalization
          </td>
          <td>
            2
          </td>
          <td>
            0
          </td>
          <td
            class="fully-correct"
          >
            Fully correct
          </td>
        </tr>
        <tr>
          <td>
            Commonly Confused Words
          </td>
          <td>
            1
          </td>
          <td>
            1
          </td>
          <td
            class=""
          >
            Partially correct
          </td>
        </tr>
        <tr>
          <td>
            Compound Subjects, Objects, and Predicates
          </td>
          <td>
            0
          </td>
          <td>
            3
          </td>
          <td
            class=""
          >
            Not correct
          </td>
        </tr>
        <tr>
          <td>
            Plural and Possessive Nouns
          </td>
          <td>
            1
          </td>
          <td>
            1
          </td>
          <td
            class=""
          >
            Partially correct
          </td>
        </tr>
        <tr>
          <td>
            Prepositional Phrases
          </td>
          <td>
            2
          </td>
          <td>
            0
          </td>
          <td
            class="fully-correct"
          >
            Fully correct
          </td>
        </tr>
        <tr>
          <td>
            Subject-Verb Agreement
          </td>
          <td>
            3
          </td>
          <td>
            0
          </td>
          <td
            class="fully-correct"
          >
            Fully correct
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
